tests/ui/error-codes/E0572.stderr
error[E0572]: return statement outside of function body
  --> $DIR/E0572.rs:1:18
   |
LL | const FOO: u32 = return 0;
   |                  ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0572`.
