tests/ui/error-codes/E0572.rs
const FOO: u32 = return 0; //~ ERROR E0572

fn main() {}
